--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "plop": "plop"
   },
   "dependencies": {
+    "element-plus": "^2.9.1",
     "plop": "^4.0.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
@@ -17,8 +18,11 @@
   "devDependencies": {
     "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/runtime-dom": "^3.5.13",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
+    "unplugin-auto-import": "^0.19.0",
+    "unplugin-vue-components": "^0.28.0",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.8"
   }
