--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/runtime-dom": "^3.5.13",
+    "prettier": "3.4.2",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "unplugin-auto-import": "^0.19.0",
