--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/runtime-dom": "^3.5.13",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "prettier": "3.4.2",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-components": "^0.28.0",
