--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "plop": "plop"
   },
   "dependencies": {
-    "element-plus": "^2.9.1",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "axios": "^1.8.4",
+    "element-plus": "^2.9.7",
+    "pinia": "^3.0.1",
     "plop": "^4.0.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
